added train test split to new data

--- a/model_recreation_full.ipynb
+++ b/model_recreation_full.ipynb
@@ -1476,6 +1476,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "161\n",
+      "2239\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(min(df_full['X.capacity_0.8']))\n",
+    "print(max(df_full['X.capacity_0.8']))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
