--- a/newdata_model_recreation.ipynb
+++ b/newdata_model_recreation.ipynb
@@ -1855,15 +1855,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TRAIN: [ 0  2  7 11 12 13 15 16 19 21 22 23 25 28 29] TEST: [ 1  3  4  5  6  8  9 10 14 17 18 20 24 26 27]\n",
-      "TRAIN: [ 1  3  4  5  6  8  9 10 14 17 18 20 24 26 27] TEST: [ 0  2  7 11 12 13 15 16 19 21 22 23 25 28 29]\n"
+      "TRAIN: [ 0  3  4  5  9 10 11 13 16 17 18 19 23 26 28] TEST: [ 1  2  6  7  8 12 14 15 20 21 22 24 25 27 29]\n",
+      "TRAIN: [ 1  2  6  7  8 12 14 15 20 21 22 24 25 27 29] TEST: [ 0  3  4  5  9 10 11 13 16 17 18 19 23 26 28]\n"
      ]
     }
    ],
@@ -1872,7 +1872,7 @@
     "splits = []\n",
     "kf = KFold(n_splits=2,shuffle=True)\n",
     "for train_index, test_index in kf.split(df_full):\n",
-    "    splits.append((train_index,train_index))\n",
+    "    splits.append((train_index,test_index))\n",
     "    print(\"TRAIN:\", train_index, \"TEST:\", test_index)\n",
     "#     X_train, X_test = X[train_index], X[test_index]\n",
     "#     y_train, y_test = y[train_index], y[test_index]"
@@ -1880,19 +1880,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(array([ 0,  2,  7, 11, 12, 13, 15, 16, 19, 21, 22, 23, 25, 28, 29]),\n",
-       "  array([ 0,  2,  7, 11, 12, 13, 15, 16, 19, 21, 22, 23, 25, 28, 29])),\n",
-       " (array([ 1,  3,  4,  5,  6,  8,  9, 10, 14, 17, 18, 20, 24, 26, 27]),\n",
-       "  array([ 1,  3,  4,  5,  6,  8,  9, 10, 14, 17, 18, 20, 24, 26, 27]))]"
+       "[(array([ 0,  3,  4,  5,  9, 10, 11, 13, 16, 17, 18, 19, 23, 26, 28]),\n",
+       "  array([ 1,  2,  6,  7,  8, 12, 14, 15, 20, 21, 22, 24, 25, 27, 29])),\n",
+       " (array([ 1,  2,  6,  7,  8, 12, 14, 15, 20, 21, 22, 24, 25, 27, 29]),\n",
+       "  array([ 0,  3,  4,  5,  9, 10, 11, 13, 16, 17, 18, 19, 23, 26, 28]))]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1903,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,17 +1913,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training RMSE:  4340.958439198636\n",
-      "Test RMSE:  4340.958439198636\n",
-      "Mean % Train Error:  4.131323255567382\n",
-      "Mean % Test Error:  4.131323255567382\n"
+      "Training RMSE:  2495.0916637461137\n",
+      "Test RMSE:  5459.361931116601\n",
+      "Mean % Train Error:  2.9706803472772214\n",
+      "Mean % Test Error:  0.32811904549320786\n"
      ]
     }
    ],
@@ -1947,17 +1947,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training RMSE:  240.4409824887772\n",
-      "Test RMSE:  240.4409824887772\n",
-      "Mean % Train Error:  0.4293734377801736\n",
-      "Mean % Error:  0.4293734377801736\n"
+      "Training RMSE:  843.993112496253\n",
+      "Test RMSE:  1277.16539112199\n",
+      "Mean % Train Error:  0.9339406894504784\n",
+      "Mean % Error:  0.31021294288517226\n"
      ]
     }
    ],
@@ -1987,17 +1987,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training RMSE:  651.2559441791373\n",
-      "Test RMSE:  651.2559441791373\n",
-      "Mean % Train Error:  0.8483555415020131\n",
-      "Mean % Error:  0.8483555415020131\n"
+      "Training RMSE:  590.8453322017282\n",
+      "Test RMSE:  1597.3559937218236\n",
+      "Mean % Train Error:  0.5624291247874693\n",
+      "Mean % Error:  0.23797138286085182\n"
      ]
     }
    ],
